Fix issue with Lo-Fi occurring for http without slow network

Bug: 795557
Change-Id: I61c3a0dc01851d3d057a948e0d0be8dd65628e9d
Reviewed-on: https://chromium-review.googlesource.com/832521
Reviewed-by: Ryan Sturm <ryansturm@chromium.org>
Commit-Queue: Doug Arnett <dougarnett@chromium.org>
Cr-Commit-Position: refs/heads/master@{#524844}
Former-commit-id: 9542a805b31d65f8fb144e4f016b90b85edb964c